--- a/style.css
+++ b/style.css
@@ -8,29 +8,51 @@
   html {
     scroll-behavior: smooth;
   }
+  body{
+      background-color: rgb(0, 0, 0);
+      background-image: linear-gradient(to bottom right ,rgba(2, 66, 43, 0.486),rgba(20, 66, 2, 0.158),rgba(94, 255, 0, 0.315));
+      background-repeat: no-repeat;
+      background-size:cover;
+      
+  }
 header{
  
     display:flex;
     justify-content:space-evenly;
     align-items:center
 }
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: #001808;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #00ff0dde;
+  }
+  
 .navmenu li {
     display: inline-block;
     padding: 0px 10px;
 
 }
 .navbar{
+
+    height:40px;
     display:flex;
     justify-content:space-around;
     align-items:center;
     margin:auto;
     margin-top: 10px;
+    margin-bottom: 10px;
     height:50px;
-    background-color:lightgreen;
-    border: 10 \ px;
-    border-color:black;
+    background-image: linear-gradient(to top left,rgba(43, 255, 0, 0.24),rgba(0, 255, 255, 0.308));
+    
+    background-color:rgba(151, 241, 151, 0.205);
 
-    border-radius: 25px;
+    border-color:rgb(3, 187, 86);
+    border-style:solid;
+
+    border-radius: 20px;
     width:90%;
 
 }
@@ -48,12 +70,14 @@ header{
 
 }
 ul li a{
-    color:black;
+    color:rgb(255, 255, 255);
     font-size: 1.6em;
 }
 ul li a:hover {
-    color:green;
+    color:rgba(92, 238, 92, 0.795);
     font-size: 1.8em;
+    transition: 0.1s ease-in-out;
+    text-decoration:underline
 }
  ul {
      list-style-type:none;
@@ -65,3 +89,419 @@ ul li a:hover {
 
 }
 
+  
+  #home .inner-width {
+    width:90%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    text-align: center;
+  }
+  
+  #home .content {
+      position:relative;
+    width: 100%;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .heroComp {
+    float: left;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: left;
+    margin-top: 350px;
+    margin-left:17%;
+    flex-direction: column;
+  }
+  
+  .head-title {
+    font-family: "Poppins", sans-serif;
+    font-size: 43px;
+    font-weight: 600;
+    line-height: 48px;
+    color:#E7FFBF;
+  }
+  
+  .head-subtitle {
+    font-family: "Poppins", sans-serif;
+    font-size: 96px;
+    color: #D2FF50;
+    line-height: 132px;
+    font-weight: 600;
+  }
+  
+  .head-about {
+    font-family: "Poppins", sans-serif;
+    color: #CFF5B0;
+    font-size: 35px;
+    font-weight: 400;
+  }
+  
+  .hackerImage {
+      pointer-events: none;
+      margin: auto;
+      margin-top: 130px;
+    float: right;
+    width: 40%;
+    height: 40%;
+  }
+  
+  #home .buttons {
+      height: 50px;
+    
+      display: flex;
+      flex-direction: row;
+   
+    margin-top: 35px;
+    text-align: center;
+
+  }
+  
+  #home .buttons a {
+    color: #7bff00;
+    display:center;
+    align-items: center;
+  
+  
+    font-size: 17px;
+    font-weight: 600;
+    margin: 5px 10px 5px 5px;
+    width: 160px;
+    border: 1px solid #73ff00;
+    padding: 3px 0px;
+    border-radius: 5px;
+    transition: 0.2s linear;
+  }
+  
+  #home .buttons a:hover,
+  #home .buttons a:nth-child(1) {
+    background-color: #7bff00;
+    color: rgba(0, 0, 0, 0.678);
+  }
+.aboutme {
+    width: 90%;
+    margin: auto    ;
+    margin-top:105px;
+    padding-top: 45px;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-between ;
+    align-content:center;
+    margin-bottom:3%;
+    ;
+}
+.bouttext{
+    display: flex;
+    align-items: left;
+    padding: 10px;
+    justify-content: center;
+    flex: 1 1 40rem ; 
+
+}
+.img{
+    width: 60%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 .1 40rem
+}
+.img img{
+    width: 60%;
+    height: 80%;
+    align-items: center;
+    
+}
+.bouttext{
+    color: #66ff00;
+    border-color: #00e7749c;
+    background-image: linear-gradient(to bottom right,rgba(0, 255, 200, 0.349),rgba(1, 110, 110, 0.288),rgba(95, 255, 2, 0));
+ 
+    background-color:#cff5b00c;
+
+    border-width: 8px;
+    border-style:outset;
+    border-radius: 30px 5px 30px 5px ;
+    flex-direction: column;
+    display: flex;
+    align-items:top;
+    justify-content:left;
+    margin:auto;
+    margin-right: 5%;
+    margin-top: 5%;
+    padding:10px;
+    width: 80%;
+    height:110%;
+
+
+}
+
+.about-text{
+    color: rgb(202, 245, 147);
+    text-align: left;
+    align-self: flex-start;
+    font-size: 1.7em;
+}
+.section-title{
+    color: rgb(255, 187, 0);
+    text-decoration: underline;
+    font-weight: bold;
+    font-size: 2.7em;
+    align-self:flex-start;
+    justify-self: start;
+    margin-top: 2%;
+ 
+}
+.icons{
+    display: flex;
+    justify-content:space-between; 
+    margin-right: 75%;
+    align-items: flex-start;
+    
+    padding:10px;
+}
+#services{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+.services{
+    color:#CFF5B0;
+    display:flex;
+    justify-content:space-around;
+    align-items:center;
+    margin:auto;
+    padding:3%;
+}
+.card{
+    margin:1%;
+    width:28%;
+    height: auto;
+    border-style:solid;
+    border-width: 5px;
+    border-radius: 20px;
+    border-color: rgba(0, 173, 52, 0.747);
+    display: flex;
+    flex-direction:column;
+    background-image: linear-gradient(to top right,rgba(50, 205, 153, 0.363),rgba(0, 68, 34, 0.356));
+    
+}
+.card .card-text  :hover{
+    zoom: 115%;
+   
+    transition: 0.4,ease-out;
+
+   
+
+}
+.servicetitle{
+    color:#eed603;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-size: 2.2em;
+    text-decoration: underline;
+
+}
+.card-icon{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding:2%;
+    padding-top: 4%;
+}
+.card-text{
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    align-items: center;
+    color:#a7eb70;
+    align-items: center;
+    padding: 3%;
+}
+.card-text h1{
+    font-size: 2.2em;
+    font-weight:Bold;                     
+}
+.card-text p{
+    font-size:1.7em;
+    color:#CFF5B0;
+    text-align:center;
+}
+#projects{
+    color:#CFF5B0;
+    margin: auto;
+    margin-top: 5%;
+    padding: 2%;
+}
+.imgcard{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    flex:1 1 40rem;
+    justify-content:space-around;
+    align-items:center;
+    margin:auto;
+    width:74%;
+    padding:4%;
+    border-radius: 20px;
+    border-style: solid ;
+    border-color:#E7FFBF;
+    background-image: linear-gradient(to bottom right,rgba(0, 156, 102, 0.534),rgba(0, 0, 0, 0.664));
+    overflow: hidden;
+}
+.proimg{
+    border-radius: 20px;
+    border-style: solid ;
+    border-color:#a7eb70;
+    margin-bottom:4%;
+    
+    
+   
+}
+#projects{
+    margin-bottom: 10%;
+}
+
+.projtitle{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding:5%;
+    font-size: 2.2em;
+    text-decoration: underline;
+    color: rgb(182, 248, 0);
+    
+
+}
+.sticky {
+    background-color: #ffa588;
+    padding: 18px 0;
+    position:fixed;
+  }
+  #contact{
+      margin: auto ;
+      height:100%;
+      margin-bottom:10%;
+    
+  }
+  .input form {
+      display:flex;
+      flex-direction: column;
+      margin:auto;
+      padding:2%;
+
+  }
+  .contact {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  
+  .contact-form {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+   
+    flex:1 1 40rem ;
+  }
+  
+  .contact-form input,
+  .contact-form textarea {
+    width: 300px;
+    height: 50px;
+    margin: 10px 0;
+    background: none;
+    border: 1px solid #48ff00;
+    outline: none;
+    padding: 20px;
+    border-radius: 10px;
+    color: rgb(188, 243, 136);
+    margin-bottom: 10px;
+    font-size:1.1em;
+    text-align: left;
+  }
+  
+  .message {
+    height: 250 px;
+    resize: vertical;
+    scroll-behavior: smooth;
+  }
+  
+  .contact-form .btn {
+    width: 300px;
+    border: 2px solid #00ff4c;
+    padding: 5px;
+    margin-top: 20px;
+    margin-left: auto;
+    cursor: pointer;
+    background-color: #48ff00;
+    border-radius: 8px;
+    color: #202124;
+    font-size: 20px;
+    transition: 0.2s linear;
+  }
+  
+ 
+  
+  .contact-info .item {
+    font-family: "Poppins";
+    letter-spacing: 2px;
+    border-radius: 50px;
+    color: rgb(176, 236, 127);
+    text-align: left;
+    margin-top: 4px;
+    transition: 0.3s linear;
+  }
+  .contact-info{
+      display:flex;
+      flex-direction: column;
+      border-left: #73ff00;
+      border-left-style: solid;
+      padding-left: 25%;
+      padding-top: 0px;
+      flex:2 1 40rem;
+  }
+  
+  .contact-head {
+    padding-bottom: 10px;
+    color: #00ff22;
+    font-size: 1.3em;
+  }
+  
+  .contact-icon img {
+      padding: 3px;
+    width: 45px;
+    height: 45px;
+  }
+  .section-title{
+      margin-bottom:3%;
+      margin-top:0;
+      text-align:center;
+      
+  }
+  footer {
+    background: #00848d;
+    background-image:linear-gradient(to bottom,rgba(84, 252, 182, 0.5),#00848d) ;
+    color: rgb(255, 255, 255);
+    padding: 30px 0;
+    text-align: center;
+    margin-top: 3%;
+  }
+  
+  .copyright {
+    font-size:1.3em;
+    margin-bottom:20px;
+  }
+  
+  .copyright a {
+    font-size:1.2em;
+    color: #48dbfb;
+    font-weight: 500;
+  }
+  
