--- a/style.css
+++ b/style.css
@@ -557,10 +557,14 @@ ul li a:hover {
       align-content:center ;
 
     }
+    .card-text h1{
+      font-size:1.8em;}
+    
+    
     
 
-  }
-  @media only screen and (max-width:500px) {
+ 
+  @media only screen and (max-width:600px) {
     .hackerImage{ display: none ;}
     .img{ display: none;}
     .bouttext {margin: auto ;
