--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ ul li a:hover {
 .aboutme {
     width: 90%;
     margin: auto    ;
-    margin-top:15%;
+    margin-top:8%;
     padding-top: 45px;
     display: inline-flex;
     flex-direction: row;
@@ -350,9 +350,10 @@ ul li a:hover {
     font-weight:Bold;                     
 }
 .card-text p{
-    font-size:1.7em;
+    font-size:1.5em;
     color:#CFF5B0;
     text-align:center;
+    margin:auto;
 }
 #projects{
     color:#CFF5B0;
@@ -495,9 +496,9 @@ ul li a:hover {
   .contact-info{
       display:flex;
       flex-direction: column;
-      border-left: #73ff00;
       
-      border-left-style: solid;
+      
+      
       padding-left: 25%;
       padding-top: 0px;
       flex:2 1 40rem;
@@ -704,6 +705,7 @@ ul li a:hover {
     }
     .card-text p {
       font-size:1em;
+      
 
     }
     .card-icon img {
